osha.policy Changelog
=====================

1.2.28 (unreleased)
-------------------

- adding nace and multilingual_thesaurus to Document & News; actually for 
  the blog, ticket 239 (thomasw)


osha.policy 1.2.27 (2009-10-06)
-------------------------------

- Overriding the Chapter Update functionality in slc.publications (gerken)


osha.policy 1.2.26 (2009-10-06)
-------------------------------
- Add new fields to Links (gerken)
- fixed the naming of multilingual_thesaurus. Had a wrong label (gerken)
- We now store workflow policies. in setup tools. Also there is now
  a new policy for workflows (gerken)

osha.policy 1.2.25 (2009-09-30)
-------------------------------
- bugfix: removed a file that was added wrongly during the structural change
  done in the last revision (gerken)

osha.policy 1.2.24 (2009-09-26)
-------------------------------
- Make osha.policy standalone buildable (gerken)

osha.policy 1.2.23 (2009-09-26)
-------------------------------
- Disable the handle_auto_translated_files subscriber. (jcbrand)
- removed unnecessary import in patches/autotranslate_get_translations.py (deroiste)


osha.policy 1.2.22 (2009-09-10)
-------------------------------
- Don't monkeypatch get_translations, it is now configurable in
  slc.autotranslateions (jcbrand)

osha.policy 1.2.21 (2009-09-09)
-------------------------------
- Updated autotranslate_get_translations patch to not look for translations in
  the current folder. (jcbrand)

osha.policy 1.2.20 (2009-09-09)
-------------------------------

- replaced several occurrences of parent-fieldname-image ids through classes (pilz)
- added subtyper for Documents to mark them linklist annotatable (pilz)
- added annotatableLinkList feature (pilz)
- added title and description for the LineField (pilz)
- patched slc.autotranslate/utiles.py:get_translations to detect file with osha
  specific naming conventions (jcbrand)


osha.policy 1.2.19 (2009-08-24)
-------------------------------
