@@ -2,26 +2,21 @@ from zope.app.schema.vocabulary import IVocabularyFactory
 from zope.interface import implements
 from zope.schema.vocabulary import SimpleTerm
 from zope.schema.vocabulary import SimpleVocabulary
-from zope.i18nmessageid import MessageFactory
-from zope.i18n import translate
 from Products.PlacelessTranslationService import getTranslationService
-
-from Acquisition import aq_get
+from zope.app.component.hooks import getSite
 
 from Products.CMFCore.utils import getToolByName
 
 
 
 class CategoriesVocabulary(object):
-    """Vocabulary factory for Categories (Subject).
+    """Vocabulary factory for Categories (Subject), translated in the osha-domain.
     """
     implements(IVocabularyFactory)
 
     def __call__(self, context):
-        context = getattr(context, 'context', context)
-        # XXX This is evil. A vocabulary shouldn't be request specific.
-        # The sorting should go into a separate widget.
-        name = "subject"
+        context = getSite()
+
         index = "Subject"
         catalog = getToolByName(context, 'portal_catalog')
         result = catalog.uniqueValuesFor(index)
@@ -29,6 +24,7 @@ class CategoriesVocabulary(object):
         result.sort()
         pts = getTranslationService()
         terms = [SimpleTerm(k, title=pts.translate(domain="osha", msgid=k, context=context) ) for k in result]
+
         return SimpleVocabulary(terms)
 
 CategoriesVocabularyFactory = CategoriesVocabulary()
